gen/grammar/LevelGrammarParser.java
// Generated from C:/Users/Robin/beuth/master/se/semester_projekt/repo/nbno-level-generator/src/grammar\LevelGrammar.g4 by ANTLR 4.5.3
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LevelGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, ALPHABET=27, DIGITS=28, ObjectBeginn=29, ObjectEnd=30, 
		Separator=31, WS=32;
	public static final int
		RULE_file = 0, RULE_levelName = 1, RULE_levelNameValue = 2, RULE_levelConfigs = 3, 
		RULE_configs = 4, RULE_levelTime = 5, RULE_levelTimeValue = 6, RULE_player = 7, 
		RULE_playerAttributes = 8, RULE_speed = 9, RULE_speedValue = 10, RULE_drinkSpeed = 11, 
		RULE_drinkSpeedValue = 12, RULE_beerLevel = 13, RULE_beerLevelValue = 14, 
		RULE_enemies = 15, RULE_enemy = 16, RULE_mapRepresentation = 17, RULE_enemyAttribute = 18, 
		RULE_enemyName = 19, RULE_enemyNameValue = 20, RULE_attackTarget = 21, 
		RULE_attackTargetValue = 22, RULE_damage = 23, RULE_damageValue = 24, 
		RULE_ki = 25, RULE_kiValue = 26, RULE_visualRange = 27, RULE_intelligence = 28, 
		RULE_map = 29, RULE_mapValue = 30, RULE_row = 31, RULE_block = 32, RULE_building = 33, 
		RULE_character = 34;
	public static final String[] ruleNames = {
		"file", "levelName", "levelNameValue", "levelConfigs", "configs", "levelTime", 
		"levelTimeValue", "player", "playerAttributes", "speed", "speedValue", 
		"drinkSpeed", "drinkSpeedValue", "beerLevel", "beerLevelValue", "enemies", 
		"enemy", "mapRepresentation", "enemyAttribute", "enemyName", "enemyNameValue", 
		"attackTarget", "attackTargetValue", "damage", "damageValue", "ki", "kiValue", 
		"visualRange", "intelligence", "map", "mapValue", "row", "block", "building", 
		"character"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'levelName:'", "'levelConfiguration'", "'levelTime:'", "'player'", 
		"'speed:'", "'drinkSpeed:'", "'beerLevel:'", "'enemies'", "'name:'", "'attackTarget:'", 
		"'DRINK'", "'PLAYER_SPEED'", "'damage:'", "'ki:'", "'('", "'|'", "')'", 
		"'map'", "'H'", "'<'", "'>'", "'^'", "'V'", "'S'", "'P'", "'X'", null, 
		null, "'{'", "'}'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ALPHABET", "DIGITS", "ObjectBeginn", "ObjectEnd", "Separator", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LevelGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LevelGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public LevelNameContext levelName() {
			return getRuleContext(LevelNameContext.class,0);
		}
		public LevelConfigsContext levelConfigs() {
			return getRuleContext(LevelConfigsContext.class,0);
		}
		public PlayerContext player() {
			return getRuleContext(PlayerContext.class,0);
		}
		public EnemiesContext enemies() {
			return getRuleContext(EnemiesContext.class,0);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LevelGrammarParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			levelName();
			setState(71);
			levelConfigs();
			setState(72);
			player();
			setState(73);
			enemies();
			setState(74);
			map();
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelNameContext extends ParserRuleContext {
		public LevelNameValueContext levelNameValue() {
			return getRuleContext(LevelNameValueContext.class,0);
		}
		public LevelNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterLevelName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitLevelName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitLevelName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelNameContext levelName() throws RecognitionException {
		LevelNameContext _localctx = new LevelNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_levelName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			levelNameValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelNameValueContext extends ParserRuleContext {
		public TerminalNode ALPHABET() { return getToken(LevelGrammarParser.ALPHABET, 0); }
		public LevelNameValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelNameValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterLevelNameValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitLevelNameValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitLevelNameValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelNameValueContext levelNameValue() throws RecognitionException {
		LevelNameValueContext _localctx = new LevelNameValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_levelNameValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(ALPHABET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelConfigsContext extends ParserRuleContext {
		public TerminalNode ObjectBeginn() { return getToken(LevelGrammarParser.ObjectBeginn, 0); }
		public ConfigsContext configs() {
			return getRuleContext(ConfigsContext.class,0);
		}
		public TerminalNode ObjectEnd() { return getToken(LevelGrammarParser.ObjectEnd, 0); }
		public LevelConfigsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelConfigs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterLevelConfigs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitLevelConfigs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitLevelConfigs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelConfigsContext levelConfigs() throws RecognitionException {
		LevelConfigsContext _localctx = new LevelConfigsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_levelConfigs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__1);
			setState(83);
			match(ObjectBeginn);
			setState(84);
			configs();
			setState(85);
			match(ObjectEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigsContext extends ParserRuleContext {
		public LevelTimeContext levelTime() {
			return getRuleContext(LevelTimeContext.class,0);
		}
		public ConfigsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterConfigs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitConfigs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitConfigs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigsContext configs() throws RecognitionException {
		ConfigsContext _localctx = new ConfigsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_configs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			levelTime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelTimeContext extends ParserRuleContext {
		public LevelTimeValueContext levelTimeValue() {
			return getRuleContext(LevelTimeValueContext.class,0);
		}
		public LevelTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterLevelTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitLevelTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitLevelTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelTimeContext levelTime() throws RecognitionException {
		LevelTimeContext _localctx = new LevelTimeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_levelTime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__2);
			setState(90);
			levelTimeValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelTimeValueContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(LevelGrammarParser.DIGITS, 0); }
		public LevelTimeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelTimeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterLevelTimeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitLevelTimeValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitLevelTimeValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelTimeValueContext levelTimeValue() throws RecognitionException {
		LevelTimeValueContext _localctx = new LevelTimeValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_levelTimeValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayerContext extends ParserRuleContext {
		public TerminalNode ObjectBeginn() { return getToken(LevelGrammarParser.ObjectBeginn, 0); }
		public PlayerAttributesContext playerAttributes() {
			return getRuleContext(PlayerAttributesContext.class,0);
		}
		public TerminalNode ObjectEnd() { return getToken(LevelGrammarParser.ObjectEnd, 0); }
		public PlayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_player; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterPlayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitPlayer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitPlayer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayerContext player() throws RecognitionException {
		PlayerContext _localctx = new PlayerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_player);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__3);
			setState(95);
			match(ObjectBeginn);
			setState(96);
			playerAttributes();
			setState(97);
			match(ObjectEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayerAttributesContext extends ParserRuleContext {
		public SpeedContext speed() {
			return getRuleContext(SpeedContext.class,0);
		}
		public List<TerminalNode> Separator() { return getTokens(LevelGrammarParser.Separator); }
		public TerminalNode Separator(int i) {
			return getToken(LevelGrammarParser.Separator, i);
		}
		public DrinkSpeedContext drinkSpeed() {
			return getRuleContext(DrinkSpeedContext.class,0);
		}
		public BeerLevelContext beerLevel() {
			return getRuleContext(BeerLevelContext.class,0);
		}
		public PlayerAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playerAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterPlayerAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitPlayerAttributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitPlayerAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayerAttributesContext playerAttributes() throws RecognitionException {
		PlayerAttributesContext _localctx = new PlayerAttributesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_playerAttributes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			speed();
			setState(100);
			match(Separator);
			setState(101);
			drinkSpeed();
			setState(102);
			match(Separator);
			setState(103);
			beerLevel();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeedContext extends ParserRuleContext {
		public SpeedValueContext speedValue() {
			return getRuleContext(SpeedValueContext.class,0);
		}
		public SpeedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_speed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterSpeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitSpeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitSpeed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpeedContext speed() throws RecognitionException {
		SpeedContext _localctx = new SpeedContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_speed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__4);
			setState(106);
			speedValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeedValueContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(LevelGrammarParser.DIGITS, 0); }
		public SpeedValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_speedValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterSpeedValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitSpeedValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitSpeedValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpeedValueContext speedValue() throws RecognitionException {
		SpeedValueContext _localctx = new SpeedValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_speedValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkSpeedContext extends ParserRuleContext {
		public DrinkSpeedValueContext drinkSpeedValue() {
			return getRuleContext(DrinkSpeedValueContext.class,0);
		}
		public DrinkSpeedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkSpeed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterDrinkSpeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitDrinkSpeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitDrinkSpeed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkSpeedContext drinkSpeed() throws RecognitionException {
		DrinkSpeedContext _localctx = new DrinkSpeedContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_drinkSpeed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__5);
			setState(111);
			drinkSpeedValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkSpeedValueContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(LevelGrammarParser.DIGITS, 0); }
		public DrinkSpeedValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkSpeedValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterDrinkSpeedValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitDrinkSpeedValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitDrinkSpeedValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkSpeedValueContext drinkSpeedValue() throws RecognitionException {
		DrinkSpeedValueContext _localctx = new DrinkSpeedValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_drinkSpeedValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeerLevelContext extends ParserRuleContext {
		public BeerLevelValueContext beerLevelValue() {
			return getRuleContext(BeerLevelValueContext.class,0);
		}
		public BeerLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beerLevel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterBeerLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitBeerLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitBeerLevel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeerLevelContext beerLevel() throws RecognitionException {
		BeerLevelContext _localctx = new BeerLevelContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_beerLevel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__6);
			setState(116);
			beerLevelValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeerLevelValueContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(LevelGrammarParser.DIGITS, 0); }
		public BeerLevelValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beerLevelValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterBeerLevelValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitBeerLevelValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitBeerLevelValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeerLevelValueContext beerLevelValue() throws RecognitionException {
		BeerLevelValueContext _localctx = new BeerLevelValueContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_beerLevelValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnemiesContext extends ParserRuleContext {
		public TerminalNode ObjectBeginn() { return getToken(LevelGrammarParser.ObjectBeginn, 0); }
		public List<EnemyContext> enemy() {
			return getRuleContexts(EnemyContext.class);
		}
		public EnemyContext enemy(int i) {
			return getRuleContext(EnemyContext.class,i);
		}
		public TerminalNode ObjectEnd() { return getToken(LevelGrammarParser.ObjectEnd, 0); }
		public List<TerminalNode> Separator() { return getTokens(LevelGrammarParser.Separator); }
		public TerminalNode Separator(int i) {
			return getToken(LevelGrammarParser.Separator, i);
		}
		public EnemiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enemies; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).enterEnemies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LevelGrammarListener ) ((LevelGrammarListener)listener).exitEnemies(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LevelGrammarVisitor ) return ((LevelGrammarVisitor<? extends T>)visitor).visitEnemies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnemiesContext enemies() throws RecognitionException {
		EnemiesContext _localctx = new EnemiesContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_enemies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__7);
			setState(121);
			match(ObjectBeginn);
			setState(122);
			enemy();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Separator) {
				{
				{
				setState(123);
				match(Separator);
				setState(124);
				enemy();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(ObjectEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
